Cambios del finde

--- a/server/mate_marote/templates/game_menu.html
+++ b/server/mate_marote/templates/game_menu.html
@@ -68,6 +68,14 @@
 			{% endwith %}
 		</form>
 	</div>
+
+	<div class="juego">
+		<h2>Stroop</h2>
+		<p>hace click a la flecha viteh.</p>
+		<form action="{% url control %}" method="get">
+			<input type="submit" value="Jugar" class="button"/>
+		</form>
+	</div>
 	
 	<div class="juego">
 		<h2>Barba roja</h2>
